# 3dSDL

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  assets.c++  assets.h++  chunk.c++  chunk.h++  chunkmain.c++  chunkmain.h++  chunkmainfuncs.c++  chunkobjsmain.c++  chunkobjsmain.h++  chunkobjsmainfuncs.c++  common.mk  compile  config.h.in  configure  configure.ac  file.c++  file.h++  getsymbols.sh  main.c++  main.h++  mainfuncs.c++  matrix.c++  matrix.h  matrix.h++  obj.c++  obj.h++  objmain.c++  objmain.h++  objmainfuncs.c++  objs.c++  objs.h++  packassets.sh  packedassets.c++  parse.c++  parseargs.c++  (+17 more)
2dmain/: 2dmain.c++  2dmain.h++  2dmainfuncs.c++
assets/: assets.c++  assets.h++  chunkshader.vert  packedassets.c++  shader.frag  shader.vert
assets/assets/: 2dshader.frag  2dshader.vert  chunkshader.vert  objshader.frag  objshader.vert
chunkmain/: chunkmain.c++  chunkmainfuncs.c++
objmain/: objmain.c++  objmain.h++  objmainfuncs.c++
randmain/: randmain.c++
