bin_PROGRAMS = objmain randmain chunkmain
objmain_SOURCES = objmain.c++ shaders.c++ window.c++ matrix.c++ texture.c++ parseargs.c++ file.c++ obj.c++ assets.c++
randmain_SOURCES = randmain.c++ random.c++
chunkmain_SOURCES = chunkmain.c++ shaders.c++ window.c++ matrix.c++ texture.c++ parseargs.c++ file.c++ obj.c++ assets.c++